Removing required validation

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -42,6 +42,7 @@
                     <i class="info-icon" aria-hidden="true"></i>
                     <span class="sr-only">Click here for more information</span>
                   </button>
+                  <ng-container *ngIf="!col?.validation?.required"> (Optional) </ng-container>
                 </label>
                 <ng-container *ngIf="col.type === 'text' || col.type === 'date' || col.type === 'number'">
                   <ng-container *ngIf="col.inputGroup">
@@ -86,9 +87,6 @@
                       frmIndividualReceipt.get(col.name).invalid
                     "
                   >
-                    <div class="text-error text-left" *ngIf="frmIndividualReceipt.get(col.name).errors?.required">
-                      {{ col.text }} is required.
-                    </div>
                     <ng-container *ngIf="frmIndividualReceipt.get(col.name).errors?.maxlength">
                       <div
                         class="text-error text-left"
@@ -146,18 +144,6 @@
                       {{ item.name }}
                     </ng-option>
                   </ng-select>
-
-                  <div
-                    class="error-text"
-                    *ngIf="
-                      (frmIndividualReceipt.touched || frmIndividualReceipt.dirty) &&
-                      frmIndividualReceipt.get(col.name)?.invalid
-                    "
-                  >
-                    <div class="text-error text-left" *ngIf="frmIndividualReceipt.get(col.name).errors?.required">
-                      {{ col.text }} is required.
-                    </div>
-                  </div>
                 </ng-container>
               </div>
             </div>
@@ -176,7 +162,6 @@
               <button class="btn btn-secondary btn-right" type="submit">
                 Save &amp; Add Transaction
               </button>
-              <!-- <a class="btn btn-previous btn-right" [routerLink]="['/forms/transactions', '3X']"> -->
               <a class="btn btn-previous btn-right" (click)="viewTransactions()">
                 View Transactions
               </a>
