Fne 1064 mahendra sprint14 (#545)
* FNE 684 changes

FNE 684 changes

* FNE 664 changes

FNE 664 changes

* FNE 664 changes

FNE 664 changes

* FNE 664 changes

FNE 664 changes

* FNE 664 changes

FNE 664 changes

* FNE 664 changes

FNE 664 changes

* FNE 1064 changes

FNE 1064 changes

* FNE 664 changes

FNE 664 changes

* FNE 664 changes

FNE 664 changes

--- a/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
@@ -65,6 +65,7 @@
           <button
             type="button"
             class="btn btn-secondary"
+            [routerLink]="['/signandSubmit', '3X']"
           >
             Sign &amp; Submit
           </button>
