--- a/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.scss
+++ b/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.scss
@@ -32,6 +32,9 @@
         padding-bottom: 15px;
         padding-top: 15px;
         vertical-align: middle;
+        .amount {
+          padding: 0.75em;
+        }
         &.selected {
           background-color: $shuttleGray;
           color: $white;
