--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -56,6 +56,7 @@
                         class="form-control"
                         [type]="col?.type"
                         [name]="col?.name"
+                        [maxlength]="col?.validation?.max"
                         [formControlName]="col?.name"
                         [ngClass]="
                           frmIndividualReceipt.get(col?.name)?.invalid &&
@@ -71,6 +72,7 @@
                       class="form-control"
                       [type]="col?.type"
                       [name]="col?.name"
+                      [maxlength]="col?.validation?.max"
                       [formControlName]="col?.name"
                       [ngClass]="
                         frmIndividualReceipt.get(col?.name)?.invalid &&
@@ -122,6 +124,14 @@
                       >
                         Entered date is outside of the report coverage period. Please enter transactions for this
                         coverage period only.
+                      </div>
+                    </ng-container>
+                    <ng-container *ngIf="frmIndividualReceipt.get(col.name).errors">
+                      <div
+                        class="text-error text-left"
+                        *ngIf="frmIndividualReceipt.get(col.name).errors?.nonAlphanumeric"
+                      >
+                        Alphanumeric characters only.
                       </div>
                     </ng-container>
                   </div>
