Fne 1064 mahendra sprint14 (#567)
* FNE 684 changes

FNE 684 changes

* FNE 664 changes

FNE 664 changes

* FNE 664 changes

FNE 664 changes

* FNE 664 changes

FNE 664 changes

* FNE 664 changes

FNE 664 changes

* FNE 664 changes

FNE 664 changes

* FNE 1064 changes

FNE 1064 changes

* FNE 664 changes

FNE 664 changes

* FNE 664 changes

FNE 664 changes

* FNE 1131 change

FNE 1131 change

* FNE 1085 changes

* FNE 1085 changes

FNE 1085 changes

* FNE 1085 changes

FNE 1085 changes

* FNE 1085 changes

FNE 1085 changes

* FNE 1085 changes

FNE 1085 changes

* removed postgres user

removed postgres user

* removed alter table

removed alter table

* FNE 1085 changes

FNE 1085 changes

* FNE 664 changes

FNE 664 changes

* FNE 664 changes

FNE 664 changes

* FNE 664 changes

FNE 664 changes

* FNE 664 changes

FNE 664 changes

* Added for FNE 664

Added for FNE 664

* FNE 644 changes

FNE 644 changes

* FNE 664 changes

FNE 664 changes

* FNE 1048 changes

FNE 1048 changes

* FNE 1048 changes

FNE 1048 changes

* FNE 664 changes

FNE 664 changes

* FNE 644 changes

FNE 644 changes

* FNE 644 changes

FNE 644 changes

--- a/front-end/src/app/forms/transactions/categories/transaction-categories.component.html
+++ b/front-end/src/app/forms/transactions/categories/transaction-categories.component.html
@@ -43,6 +43,8 @@
         <button
           type="button"
           class="btn btn-secondary"
+          [routerLink]="['/signandSubmit', '3X']"
+
         >
           Sign &amp; Submit
         </button>
