clear search tags when clear filters button clicked

--- a/front-end/src/app/forms/transactions/filter/transactions-filter.component.html
+++ b/front-end/src/app/forms/transactions/filter/transactions-filter.component.html
@@ -185,7 +185,7 @@
         <button
           type="button"
           class="btn btn-secondary"
-          (click)="applyFilters()"
+          (click)="applyFilters(false)"
         >
           Apply Filters
         </button>
