add filters as tags

--- a/front-end/src/app/forms/transactions/transactions.component.scss
+++ b/front-end/src/app/forms/transactions/transactions.component.scss
@@ -63,7 +63,7 @@
     }
 
     .transactions__btn-search-filter {
-      margin: 0 3px;
+      margin: 3px;
       background-color: $shuttleGray;
       color: $white;
     }
