--- a/front-end/src/app/forms/transactions/transactions.component.html
+++ b/front-end/src/app/forms/transactions/transactions.component.html
@@ -105,6 +105,43 @@
                     or
                 </span>
               </div>
+              <div *ngFor="let categoryZ of filters.filterCategories; let i = index">
+                <button
+                  class="btn btn-left transactions__btn-search-filter transactions__btn-container;"
+                  (click)="removeCategoryFilter(i, categoryZ)">
+                  <i class="fas fa-window-close"></i>
+                  Type: {{ categoryZ }}
+                </button>
+                <span class="transactions__btn-search-filter-join" 
+                  *ngIf="i < (filters.filterCategories.length -1 )">
+                    or
+                </span>
+              </div>
+              <div *ngFor="let state of filters.filterStates; let i = index">
+                <button
+                  class="btn btn-left transactions__btn-search-filter transactions__btn-container;"
+                  (click)="removeStateFilter(i, state)">
+                  <i class="fas fa-window-close"></i>
+                  {{ state }}
+                </button>
+                <span class="transactions__btn-search-filter-join" 
+                  *ngIf="i < (filters.filterStates.length -1 )">
+                    or
+                </span>
+              </div> 
+              <div *ngIf="filters.filterAmountMin > 0 && filters.filterAmountMax > 0">
+                <button
+                  class="btn btn-left transactions__btn-search-filter transactions__btn-container;"
+                  (click)="removeAmountFilter()">
+                  <i class="fas fa-window-close"></i>
+                  Amount: {{ filters.filterAmountMin | currency:'USD':'symbol-narrow':'1.2-2'}} - 
+                          {{ filters.filterAmountMax | currency:'USD':'symbol-narrow':'1.2-2'}}
+                </button>
+                <span class="transactions__btn-search-filter-join" 
+                  *ngIf="i < (filters.filterStates.length -1 )">
+                    or
+                </span>
+              </div> 
             </div>          
           </div>
         </div>
