Renaming component, starting to implement service for contribution amounts.

--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -68,13 +68,13 @@
       </div>
 
       <div class="form__step" [hidden]="step !== 'step_3'">
-        <f3x-receipts
+        <f3x-individual-receipt
           [formOptionsVisible]="formOptionsVisible"
           [selectedOptions]="selectedOptions"
           [transactionTypeText]="transactionTypeText"
           (status)="onNotify($event)"
         >
-        </f3x-receipts>
+        </f3x-individual-receipt>
       </div>
 
       <div class="form__step" [hidden]="step !== 'step_4'">
