resolving transaction-sidebar.component.html conflict

--- a/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
@@ -48,7 +48,7 @@
       </div>
       <ng-container *ngIf="step!=='step_3'">
         <div class="btn-row">
-          <button type="button" class="btn btn-secondary">
+          <button type="button" class="btn btn-secondary" [routerLink]="['/signandSubmit', '3X']">
             Sign &amp; Submit
           </button>
         </div>
