--- a/front-end/src/app/forms/transactions/transactions.component.scss
+++ b/front-end/src/app/forms/transactions/transactions.component.scss
@@ -62,6 +62,35 @@
       padding: 1em;
     }
 
+    // .transactions__btn-search-wrapper {
+    //   background-color: lightgrey;
+    // }
+
+    // .tag__category {
+    //   background-color: #e8e8e8;
+    //   border-radius: 2px;
+    //   display: block;
+    //   padding: .5rem .7rem;
+    //   margin: .5rem .5rem 0 0;
+    //   float: left;
+    // }
+
+    .transactions__tag_wrapper {
+      // background-color: #e8e8e8;
+      width: fit-content;
+      .transactions__tag_group {
+        // margin-right: 7px;
+        background-color: lightgrey;
+        // padding: 20px 10px;
+        border-radius: 2px;
+        float: left;
+        margin: 3px;
+      }
+      .transactions__tag_btn {
+        margin: 15px 10px 15px 10px;
+      }
+    }
+
     .transactions__btn-search-filter {
       margin: 3px;
       background-color: $shuttleGray;
@@ -69,8 +98,10 @@
     }
 
     .transactions__btn-search-filter-join {
-      float: left;
-      padding: 10px 2px 0 2px;
+      // float: left;
+      display: inline-block;
+      // padding: 24px 2px 2px 2px;
+      padding-right: 3px;
     }
 
     .transactions__trx-btn {
