--- a/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
@@ -5,6 +5,12 @@
     <div class="search-field-container">
       <div class="input-group">
         <input type="text" name="search" class="search-input" placeholder="Search by Type" class="form-control py-1" />
+      </div>           
+        <div class="input-group-append">
+          <span class="input-group-text">
+            <i class="search-icon" aria-hidden="true"></i>
+          </span>
+        </div>
       </div>
     </div>
   </header>
