fixing the search bat input box border issue.

--- a/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
@@ -2,15 +2,11 @@
   <header>
     <h3 class="text-center">Transaction Categories</h3>
     <hr />
+
     <div class="search-field-container">
-      <div class="input-group">
+      <div class="form-group ml-1 mt-2">
         <input type="text" name="search" class="search-input" placeholder="Search by Type" class="form-control py-1" />
-        <div class="input-group-append">
-          <span class="input-group-text">
-            <!-- <i class="search-icon text-grey" aria-hidden="true"></i> -->
-            <i class="search-icon" aria-hidden="true"></i>
-          </span>
-        </div>
+        <i class="search-icon" aria-hidden="true"></i>
       </div>
     </div>
   </header>
