--- a/front-end/src/app/forms/transactions/transactions.component.html
+++ b/front-end/src/app/forms/transactions/transactions.component.html
@@ -93,15 +93,44 @@
         <div class="grid-row">
           <div class="grid-row__col grid-row__col--12">
             <div class="transactions__btn-container">
-              <!-- <div id="button-container" class="btn-group transactions__tag_wrapper">
-                  <button class="btn btn-primary transactions__tag_btn">Button 1</button>
-                  <button class="btn btn-primary transactions__tag_btn">Button 2</button>
-                  <button class="btn btn-primary transactions__tag_btn">Button 3</button>
-                  <button class="btn btn-primary transactions__tag_btn">Button 4</button>
-              </div> -->
+              <div class="transactions__tag-outer-wrapper">
+                  <div id="button-container" class="transactions__tag_wrapper">
+                      <div *ngFor="let tag of tagArray">
+                        <div *ngIf="tag.group.length > 0" class="transactions__tag_group">
+                          <span *ngFor="let gTag of tag.group; let i = index">
+                            <button 
+                              class="btn transactions__tag_btn transactions__btn-search-filter"
+                              (click)="removeTag(tag.type, i, gTag)">
+                              <i class="fas fa-window-close transactions__close-tag"></i>
+                                <span *ngIf="tag.type !== 'amount' && 
+                                             tag.type !== 'date'"
+                                >
+                                  <span *ngIf="tag.prefix">{{tag.prefix}}: </span>{{gTag}}
+                                </span>
+                                <span *ngIf="tag.type === 'date'">{{tag.prefix}}:
+                                    {{ gTag.filterDateFrom | date: 'MM/dd/yyyy'}} - 
+                                    {{ gTag.filterDateTo | date: 'MM/dd/yyyy'}}
+                                </span>                              
+                                <span *ngIf="tag.type === 'amount'">{{tag.prefix}}:
+                                    {{ gTag.filterAmountMin | currency:'USD':'symbol-narrow':'1.2-2'}} - 
+                                    {{ gTag.filterAmountMax | currency:'USD':'symbol-narrow':'1.2-2'}}
+                                </span>
+                            </button>
+                            <span class="transactions__btn-search-filter-join" 
+                              *ngIf="i < (tag.group.length -1 )">
+                                or
+                            </span>
+                          </span>
+                        </div>
+                      </div>
+                  </div>
+              </div>
 
-              <div style="display: inline-block">
+              <!-- <br>
+              <hr>
+              <br> -->
 
+              <!-- <div style="display: inline-block">
                 <div id="button-container" class="transactions__tag_wrapper">
                   <div *ngIf="searchTextArray.length > 0" class="transactions__tag_group">
                     <span *ngFor="let searchTextItem of searchTextArray; let i = index">
@@ -117,10 +146,8 @@
                       </span>
                     </span>
                   </div>
-
                   <div *ngIf="filters.filterCategories && filters.filterCategories.length > 0" 
                       class="transactions__tag_group">
-                  <!-- <div> -->
                     <span *ngFor="let categoryZ of filters.filterCategories; let i = index">
                       <button
                         class="btn transactions__tag_btn transactions__btn-search-filter"
@@ -133,9 +160,44 @@
                           or
                       </span>
                     </span>
-                  </div>                  
-
-                </div>
+                  </div> 
+                  <div *ngIf="filters.filterDateFrom  && filters.filterDateTo"
+                      class="transactions__tag_group">
+                    <button
+                      class="btn transactions__tag_btn transactions__btn-search-filter"
+                      (click)="removeDateFilter()">
+                      <i class="fas fa-window-close"></i>
+                      Date: {{ filters.filterDateFrom | date: 'MM/dd/yyyy'}} - 
+                              {{ filters.filterDateTo | date: 'MM/dd/yyyy'}}
+                    </button>
+                  </div>
+                  <div *ngIf="filters.filterStates && filters.filterStates.length > 0" 
+                      class="transactions__tag_group">
+                    <span *ngFor="let state of filters.filterStates; let i = index">
+                      <button
+                        class="btn transactions__tag_btn transactions__btn-search-filter"
+                        (click)="removeStateFilter(i, state)">
+                        <i class="fas fa-window-close"></i>
+                        {{ state }}
+                      </button>
+                      <span class="transactions__btn-search-filter-join" 
+                        *ngIf="i < (filters.filterStates.length -1 )">
+                          or
+                      </span>
+                    </span>                   
+                  </div>
+                  <div *ngIf="filters.filterAmountMin > 0 && filters.filterAmountMax > 0"
+                      class="transactions__tag_group">
+                    <button
+                      class="btn transactions__tag_btn transactions__btn-search-filter"
+                      (click)="removeAmountFilter()">
+                      <i class="fas fa-window-close"></i>
+                      Amount: {{ filters.filterAmountMin | currency:'USD':'symbol-narrow':'1.2-2'}} - 
+                              {{ filters.filterAmountMax | currency:'USD':'symbol-narrow':'1.2-2'}}
+                    </button>
+                  </div>                    
+                </div> -->
+                                
 
                 <!-- <div id="" class="transactions__tag_wrapper">
                   <span *ngFor="let categoryZ of filters.filterCategories; let i = index">
@@ -183,7 +245,7 @@
               </div> -->
 
 
-              <div *ngIf="filters.filterDateFrom  && filters.filterDateTo">
+              <!-- <div *ngIf="filters.filterDateFrom  && filters.filterDateTo">
                 <button
                   class="btn btn-left transactions__btn-search-filter transactions__btn-container;"
                   (click)="removeDateFilter()">
@@ -191,8 +253,8 @@
                   Date: {{ filters.filterDateFrom | date: 'MM/dd/yyyy'}} - 
                           {{ filters.filterDateTo | date: 'MM/dd/yyyy'}}
                 </button>
-              </div> 
-              <div *ngFor="let state of filters.filterStates; let i = index">
+              </div>  -->
+              <!-- <div *ngFor="let state of filters.filterStates; let i = index">
                 <button
                   class="btn btn-left transactions__btn-search-filter transactions__btn-container;"
                   (click)="removeStateFilter(i, state)">
@@ -203,8 +265,8 @@
                   *ngIf="i < (filters.filterStates.length -1 )">
                     or
                 </span>
-              </div> 
-              <div *ngIf="filters.filterAmountMin > 0 && filters.filterAmountMax > 0">
+              </div>  -->
+              <!-- <div *ngIf="filters.filterAmountMin > 0 && filters.filterAmountMax > 0">
                 <button
                   class="btn btn-left transactions__btn-search-filter transactions__btn-container;"
                   (click)="removeAmountFilter()">
@@ -212,7 +274,7 @@
                   Amount: {{ filters.filterAmountMin | currency:'USD':'symbol-narrow':'1.2-2'}} - 
                           {{ filters.filterAmountMax | currency:'USD':'symbol-narrow':'1.2-2'}}
                 </button>
-              </div> 
+              </div>  -->
             </div>          
           </div>
         </div>
