--- a/front-end/src/app/app-layout/app-layout.component.html
+++ b/front-end/src/app/app-layout/app-layout.component.html
@@ -44,17 +44,19 @@
           </div>
           <div class="committee-name">
             {{ committeeName }}
-          </div>
+          </div> 
         </div>
         <div class="float-right">
           <div class="float-right" *ngIf="showFormDueDate">
             <div>
-              Form {{ formType }} | {{ formDescription }} | {{ formStartDate | date: 'MM/dd/yyyy' }} -
-              {{ formEndDate | date: 'MM/dd/yyyy' }}
-            </div>
-            <div>
+              <div>
+                Form {{ formType }} | {{ formDescription }} | {{ formStartDate | date: 'MM/dd/yyyy' }} -
+                {{ formEndDate | date: 'MM/dd/yyyy' }}
+              </div>              
               <ng-container *ngIf="reportOverDue">
-                Over due by {{ formDaysUntilDue }} days ({{ dueDate | date: 'MM/dd/yyyy' }})
+                <span class="text-error">
+                  Over due by {{ formDaysUntilDue }} days ({{ dueDate | date: 'MM/dd/yyyy' }})
+                </span>
               </ng-container>
               <ng-container *ngIf="!reportOverDue">
                 Due in {{ formDaysUntilDue }} days ({{ dueDate | date: 'MM/dd/yyyy' }})
