--- a/front-end/src/app/forms/transactions/transactions.component.html
+++ b/front-end/src/app/forms/transactions/transactions.component.html
@@ -71,8 +71,8 @@
                 Filter
               </button>               
               <div class="input-group pl-0 transactions__trx-search">
-                <div class="input-group-append" (click)="clearSearch()" 
-                    ngbTooltip="Clear Keywords" tooltipClass="form-tooltip">
+                <div class="input-group-append" (click)="clearSearchAndFilters()" 
+                    ngbTooltip="Clear Keywords and Filters" tooltipClass="form-tooltip">
                   <span class="input-group-text" id="">
                     <i class="fas fa-eraser text-grey" aria-hidden="true"></i>
                   </span>
@@ -102,7 +102,8 @@
                               class="btn transactions__tag_btn transactions__btn-search-filter"
                               (click)="removeTag(tag.type, i, gTag)">
                               <i class="fas fa-window-close transactions__close-tag"></i>
-                                <span *ngIf="tag.type !== 'amount' && 
+                                <span *ngIf="tag.type !== 'amount' &&
+                                             tag.type !== 'aggregateAmount' && 
                                              tag.type !== 'date'"
                                 >
                                   <span *ngIf="tag.prefix">{{tag.prefix}}: </span>{{gTag}}
@@ -114,6 +115,10 @@
                                 <span *ngIf="tag.type === 'amount'">{{tag.prefix}}:
                                     {{ gTag.filterAmountMin | currency:'USD':'symbol-narrow':'1.2-2'}} - 
                                     {{ gTag.filterAmountMax | currency:'USD':'symbol-narrow':'1.2-2'}}
+                                </span>
+                                <span *ngIf="tag.type === 'aggregateAmount'">{{tag.prefix}}:
+                                    {{ gTag.filterAggregateAmountMin | currency:'USD':'symbol-narrow':'1.2-2'}} - 
+                                    {{ gTag.filterAggregateAmountMax | currency:'USD':'symbol-narrow':'1.2-2'}}
                                 </span>
                             </button>
                             <span class="transactions__btn-search-filter-join" 
