Starting to implement ticket

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -71,6 +71,7 @@
                     <input
                       class="form-control"
                       [type]="col.type === 'date' ? col.type : 'text'"
+                      [style.width]="col.width"
                       [name]="col?.name"
                       [maxlength]="col?.validation?.max"
                       [formControlName]="col?.name"
