UI fix for hidden apply filter button FNE-1190

--- a/front-end/src/app/forms/transactions/filter/transactions-filter.component.scss
+++ b/front-end/src/app/forms/transactions/filter/transactions-filter.component.scss
@@ -65,6 +65,7 @@
   }
   footer {
     background-color: $mineShaft;
+    position: relative;
     .form-sidebar__item {
       border-bottom: 1px solid $white;
       color: $white;
